--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,12 +3,12 @@
   margin: 0;
 }
 @font-face {
-  font-family: "Poppins";
-  src: url("Poppins/Poppins-Light.ttf");
+  font-family: "Oswald";
+  src: url("/Oswald/Oswald-VariableFont_wght.ttf");
 }
 @font-face {
-  font-family: "Oswald";
-  src: url("Oswald/Oswald-VariableFont_wght.ttf");
+  font-family: "Poppins";
+  src: url("/Poppins/Poppins-Light.ttf");
 }
 #home {
   scroll-margin-top: 50px;
@@ -77,7 +77,7 @@ ul {
   display: flex;
   text-align: right;
   margin-bottom: 100px;
-  background-image: url(background-jadi-removebg-preview.png);
+  background-image: url(/assets/image/background-jadi-removebg-preview.png);
   background-size: 1000px;
   background-repeat: no-repeat;
 }
@@ -500,4 +500,411 @@ ul {
 }
 #footer .copy p {
   font-size: 20px;
+}
+@media screen and (max-width: 480px) {
+  .nav-link {
+    display: none;
+  }
+  #conten {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    background-image: url(/assets/image/background-jadi-removebg-preview.png);
+    background-size: 200px;
+    background-repeat: no-repeat;
+  }
+  .conten-deskripsi {
+    order: 2;
+  }
+  .conten-deskripsi h3 {
+    margin-top: 20px;
+    font-family: "Oswald";
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 36px;
+    margin-left: 0;
+  }
+
+  .conten-deskripsi h6 {
+    text-align: center;
+    margin-top: 50px;
+    font-family: "Poppins";
+    font-size: 15px;
+    margin-bottom: 30px;
+  }
+
+  .conten-deskripsi a {
+    background-color: orange;
+    padding: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-family: "Poppins";
+    color: white;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    box-shadow: 5px 5px 10px #c97b07;
+  }
+  .conten-gambar img {
+    width: 300px;
+    height: 300px;
+    order: 1;
+  }
+  #tentang {
+    height: 600px;
+  }
+  .judul-tentang {
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding-top: 60px;
+    font-size: 30px;
+    font-family: "Oswald";
+  }
+
+  .judul-tentang hr {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 3px;
+    background-color: black;
+    color: black;
+    border-radius: 10px;
+  }
+
+  .tentang-deskripsi {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .tentang-deskripsi img {
+    width: 300px;
+    height: 200px;
+    margin-top: 10px;
+    z-index: 3;
+    order: 2;
+  }
+  .tentang-deskripsi p {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-family: "Poppins";
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 15px;
+  }
+  .bawah {
+    margin-top: 100px;
+    height: 160px;
+    width: auto;
+    background-color: white;
+    position: absolute;
+  }
+  .border-latar {
+    margin-top: 50px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: auto;
+    margin-left: 0;
+    margin-left: 10px;
+    margin-right: 0;
+    margin-right: 10px;
+    background-color: #ffb429;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px grey;
+  }
+  .border-conten {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100px;
+    margin: 16px;
+    height: 80px;
+    background-color: white;
+    border-radius: 10px;
+  }
+
+  .border-conten p {
+    font-family: "Poppins";
+    font-size: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .border-conten img {
+    margin-top: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  #lakukan {
+    padding-top: 100px;
+    z-index: 2;
+  }
+
+  .judul-lakukan {
+    font-family: "Oswald";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-family: "Oswald";
+    font-size: 30px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .judul-lakukan hr {
+    width: 300px;
+    height: 3px;
+    background-color: black;
+    color: black;
+    border-radius: 10px;
+  }
+  .deskripsi-lakukan p {
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    font-family: "Poppins";
+    margin-right: 0;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: -40px;
+  }
+  .border-waktu-kegiatan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0;
+  }
+  .border-kegiatan {
+    width: 300px;
+    height: 292px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    background-color: #ff9501;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px #ff9900;
+    margin-left: 0;
+  }
+  .border-kegiatan2 {
+    width: 300px;
+    height: 292px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    background-color: #ff9501;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px #ff9900;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .border-kegiatan3 {
+    width: 300px;
+    height: 292px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    background-color: #ff9501;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px #ff9900;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .border-waktu {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 260px;
+    height: 169px;
+    border-radius: 10px;
+  }
+  .border-waktu2 {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 260px;
+    height: 169px;
+    border-radius: 10px;
+  }
+  .border-waktu3 {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 260px;
+    height: 179px;
+    border-radius: 10px;
+  }
+  .border-waktu3 img {
+    width: 100px;
+    height: 100px;
+  }
+  .border-kegiatan3 p {
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 35px;
+    margin-right: 35px;
+    font-family: "Poppins";
+    margin-bottom: 40px;
+    color: white;
+  }
+  #testimonial {
+    margin-left: 0;
+  }
+  .judul-testimoni {
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .judul-testimoni h4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "Oswald";
+    font-size: 30px;
+    font-family: "Oswald";
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .judul-testimoni hr {
+    margin-left: 0;
+    margin-right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 200px;
+    height: 3px;
+    background-color: black;
+    color: black;
+    border-radius: 10px;
+    margin-bottom: 80px;
+  }
+  .conten-testimoni {
+    width: auto;
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+  }
+  .gambar-kutip-2 img {
+    margin-top: -50px;
+    height: 160px;
+    position: relative;
+    width: 166px;
+  }
+  .card-testi img {
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 125px;
+  }
+  .card-testi2 img {
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 125px;
+  }
+  .card-testi3 img {
+    margin: auto;
+    margin-top: 30px;
+    width: 100px;
+    height: 125px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-testi {
+    margin-top: 30px;
+    width: auto;
+    margin-right: 60px;
+    height: 386px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #e4d3c3;
+    background-color: white;
+  }
+  .card-testi2 {
+    margin-top: -60px;
+    position: absolute;
+    width: 290px;
+    margin-left: 30px;
+    height: 386px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #e4d3c3;
+    background-color: white;
+    display: none;
+  }
+  .card-testi3 {
+    margin-top: -60px;
+    position: absolute;
+    width: 290px;
+    margin-left: 30px;
+    height: 386px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #e4d3c3;
+    background-color: white;
+    display: none;
+  }
+  .gambar-kutip-2 img {
+    margin-top: -40px;
+    height: 70px;
+    position: relative;
+    width: 70px;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
 }
