--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,7 +15,8 @@
 #home {
   scroll-margin-top: 50px;
 }
-body {
+body .container {
+  max-width: 1263px;
   margin: auto;
 }
 :root {
@@ -35,6 +36,8 @@ body {
 }
 
 .navbar {
+  width: 1263px;
+  margin: auto;
   position: fixed;
   left: 0;
   top: 0;
@@ -45,7 +48,7 @@ body {
   height: 80px;
   background-color: white;
   z-index: 3;
-  box-shadow: 0px 0px 10px grey;
+  box-shadow: 0px 0px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 ul li a {
@@ -78,7 +81,7 @@ ul {
 }
 .sign-in a:hover {
   color: white;
-  background-color: darksalmon;
+  background-color: orange;
 }
 
 #conten {
